add_library(
        Utau

        Utau.h
        Utau.cc
        AudioServiceProvider.h
        AudioPlaybackStream.h
        AudioPlaybackStream.cc
        PipewireAudioServiceProvider.h
        PipewireAudioServiceProvider.cc
        PipewireAudioPlaybackStream.h
        PipewireAudioPlaybackStream.cc)
